--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "nanoid": "^4.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-app-rewire-alias": "^1.1.7",
